--- a/Assignment2/validation_assertion.ipynb
+++ b/Assignment2/validation_assertion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "original_data = pd.read_json(\"2022-04-07.json\")\n",
+    "original_data = pd.read_json(\"data.json\")\n",
     "data = original_data.replace(r'^\\s*$', np.nan, regex=True)\n",
     "\n",
     "# Every breadcrumb record occur with velchle ID\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "{'20'}\n",
-      "{'SEP'}\n"
+      "{'SEP', 'OCT'}\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,17 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are more than 1000 records within one trip id\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trip = data.groupby(by=\"EVENT_NO_TRIP\")[\"VEHICLE_ID\"].count()\n",
     "\n",
