--- a/Assignment2/readjson.ipynb
+++ b/Assignment2/readjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,18 +19,16 @@
       "the integers in this field range from 0.0to 596291.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
       "ACT_TIME:\n",
       "the integers in this field range from 14867.0to 90986.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
-      "GPS_LONGITUDE:\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/zhengmao/Documents/Github/DataEngTeamProject/readjson.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zhengmao/Documents/Github/DataEngTeamProject/readjson.ipynb#ch0000000?line=18'>19</a>\u001b[0m     column \u001b[39m=\u001b[39m df[col]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zhengmao/Documents/Github/DataEngTeamProject/readjson.ipynb#ch0000000?line=19'>20</a>\u001b[0m     dfmax\u001b[39m.\u001b[39mappend(\u001b[39mfloat\u001b[39m(column\u001b[39m.\u001b[39mmax()))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/zhengmao/Documents/Github/DataEngTeamProject/readjson.ipynb#ch0000000?line=20'>21</a>\u001b[0m     dfmin\u001b[39m.\u001b[39mappend(\u001b[39mfloat\u001b[39;49m(column\u001b[39m.\u001b[39;49mmin()))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zhengmao/Documents/Github/DataEngTeamProject/readjson.ipynb#ch0000000?line=21'>22</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mthe integers in this field range from \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmin\u001b[39m(dfmin)\u001b[39m}\u001b[39;00m\u001b[39mto \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mmax\u001b[39m(dfmax)\u001b[39m}\u001b[39;00m\u001b[39m, and there are \u001b[39m\u001b[39m{\u001b[39;00mn\u001b[39m}\u001b[39;00m\u001b[39m distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
+      "GPS_LONGITUDE:\n",
+      "the integers in this field range from -122.70826to 0.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
+      "GPS_LATITUDE:\n",
+      "the integers in this field range from 0.0to 45.89615, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
+      "GPS_SATELLITES:\n",
+      "the integers in this field range from 0.0to 12.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
+      "GPS_HDOP:\n",
+      "the integers in this field range from 0.0to 25.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n",
+      "SCHEDULE_DEVIATION:\n",
+      "the integers in this field range from -99999.0to 5693.0, and there are 7424902 distinct vehicles identified in the data. Every vehicle is used on weekdays but only 50% of the vehicles are active on weekends\n"
      ]
     }
    ],
@@ -38,14 +36,15 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "path = '/Users/zhengmao/Documents/Github/DataEngTeamProject/data/'\n",
+    "path = '/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/'\n",
     "filelist = os.listdir(path)\n",
-    "colNames = ['EVENT_NO_TRIP', 'EVENT_NO_STOP', 'VEHICLE_ID','METERS', 'ACT_TIME', 'GPS_LONGITUDE', 'GPS_LATITUDE', 'GPS_SATELLITES', 'GPS_HDOP', 'SCHEDULE_DEVIATION']\n",
-    "# 'VELOCITY', 'DIRECTION'\n",
+    "colNames = ['EVENT_NO_TRIP','VELOCITY', 'DIRECTION','EVENT_NO_STOP', 'VEHICLE_ID','METERS', 'ACT_TIME', 'GPS_LONGITUDE', 'GPS_LATITUDE', 'GPS_SATELLITES', 'GPS_HDOP', 'SCHEDULE_DEVIATION']\n",
+    "#  'DIRECTION'\n",
     "dflist = []\n",
     "n = 0\n",
     "for file in filelist:\n",
-    "    df = pd.read_json(path+file)\n",
+    "    # print(path+file)\n",
+    "    df = pd.read_csv(path+file)\n",
     "    n = n + len(df)\n",
     "    dflist.append(df)\n",
     "for col in colNames:\n",
