update demo code

--- a/Assignment2/timestampToDatetime.ipynb
+++ b/Assignment2/timestampToDatetime.ipynb
@@ -2,40 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-18.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-30.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-25.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-19.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-27.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-26.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-09.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-08.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-20.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-05-07.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-05-01.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-05-02.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-05-03.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-11.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-10.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-12.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-07.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-13.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-17.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-16.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-14.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-28.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-29.csv\n",
-      "/Users/zhengmao/Documents/Github/DataEngTeamProject/Assignment2/validData/2022-04-15.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -45,6 +14,7 @@
     "for file in filelist:\n",
     "    df = pd.read_csv(path+file)\n",
     "    df['DateTime'] = pd.to_datetime(df['ACT_TIME'], unit='s')\n",
+    "    df.drop(columns=[], inplace=True)\n",
     "    df.to_csv(path+file)"
    ]
   }
