--- a/Assignment3/visual.ipynb
+++ b/Assignment3/visual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_04a3daf187f6d6359b5500303392d351 {\n",
+       "                #map_7b6061036c91f8e927c62e3e6a559a39 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -45,13 +45,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_04a3daf187f6d6359b5500303392d351&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_7b6061036c91f8e927c62e3e6a559a39&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_04a3daf187f6d6359b5500303392d351 = L.map(\n",
-       "                &quot;map_04a3daf187f6d6359b5500303392d351&quot;,\n",
+       "            var map_7b6061036c91f8e927c62e3e6a559a39 = L.map(\n",
+       "                &quot;map_7b6061036c91f8e927c62e3e6a559a39&quot;,\n",
        "                {\n",
        "                    center: [45.64505318885279, -122.59408694242678],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -65,18 +65,18 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_26ba796a7b03d51da3891f5d9bb38c74 = L.tileLayer(\n",
+       "            var tile_layer_83b8599fcb5fa238f1b09773c4b6bd70 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_04a3daf187f6d6359b5500303392d351);\n",
+       "            ).addTo(map_7b6061036c91f8e927c62e3e6a559a39);\n",
        "        \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x10403e6d0>"
+       "<folium.folium.Map at 0x119390ee0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,9 +89,10 @@
     "\n",
     "df = pd.read_csv('2022-05-20.csv')\n",
     "# x_coordinate\ty_coordinate\n",
-    "df = df[['x_coordinate', 'y_coordinate']]\t\n",
+    "df = df[['y_coordinate', 'x_coordinate']]\t\n",
     "basicMap = folium.Map(location=[df['y_coordinate'].mean(), df['x_coordinate'].mean()], zoom_start = 11)\n",
-    "basicMap\n"
+    "basicMap\n",
+    "# folium.plugins.HeatMap(df).add_to(basicMap)\n"
    ]
   }
  ],
