--- a/Assignment3/validation.ipynb
+++ b/Assignment3/validation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('data.csv')"
+    "filename = '2022-05-22.csv'\n",
+    "data = pd.read_csv(filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +47,16 @@
     "data['stop'] = data['stop'].dt.time\n",
     "data['arrive'] = data['arrive'].dt.time\n",
     "\n",
-    "data.to_csv('data.csv',index=False)\n"
+    "data.to_csv(filename,index=False)\n"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
