--- a/Assignment3/validation.ipynb
+++ b/Assignment3/validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# temp = pd.DataFrame(data.values.repeat(data.stop_time, axis=0), columns=data.columns)\n",
     "data['stop_time'] =  data['stop_time'].fillna(method='ffill')\n",
+    "data['stop_time'] =  data['stop_time'].fillna(method='bfill')\n",
     "data['x_coordinate'] =  data['x_coordinate'].fillna(method='ffill')\n",
     "data['y_coordinate'] =  data['y_coordinate'].fillna(method='ffill')\n",
     "\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
