--- a/dataDescription.ipynb
+++ b/dataDescription.ipynb
@@ -2,67 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-04-30\n",
-      "2022-05-01\n",
-      "2022-05-16\n",
-      "2022-04-07\n",
-      "2022-05-28\n",
-      "2022-05-08\n",
-      "2022-05-13\n",
-      "2022-05-11\n",
-      "2022-05-18\n",
-      "2022-04-20\n",
-      "2022-04-13\n",
-      "2022-04-12\n",
-      "2022-04-11\n",
-      "2022-05-22\n",
-      "2022-05-21\n",
-      "2022-05-17\n",
-      "2022-04-18\n",
-      "2022-04-28\n",
-      "2022-05-12\n",
-      "2022-05-02\n",
-      "2022-05-26\n",
-      "2022-04-17\n",
-      "2022-04-19\n",
-      "2022-05-27\n",
-      "2022-04-08\n",
-      "2022-05-24\n",
-      "2022-05-19\n",
-      "2022-05-15\n",
-      "2022-04-27\n",
-      "2022-05-07\n",
-      "2022-04-16\n",
-      "2022-04-10\n",
-      "2022-04-26\n",
-      "2022-05-03\n",
-      "2022-05-09\n",
-      "2022-04-14\n",
-      "2022-04-29\n",
-      "2022-05-25\n",
-      "2022-05-10\n",
-      "2022-05-23\n",
-      "2022-04-15\n",
-      "2022-05-14\n",
-      "2022-04-09\n",
-      "2022-04-25\n",
-      "2022-05-20\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{5: 7, 6: 6, 0: 7, 3: 6, 4: 6, 2: 6, 1: 7}"
+       "{'Saturday': 7,\n",
+       " 'Sunday': 6,\n",
+       " 'Monday': 7,\n",
+       " 'Thursday': 6,\n",
+       " 'Friday': 6,\n",
+       " 'Wednesday': 6,\n",
+       " 'Tuesday': 7}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,11 +30,12 @@
     "for date in filelist:\n",
     "    filedate = date.split('.')[0]\n",
     "    # print(time.strftime(filedate))\n",
-    "    week =datetime.strptime(filedate, '%Y-%m-%d').weekday()\n",
+    "    week =datetime.strptime(filedate, '%Y-%m-%d').strftime('%A')\n",
     "    filesdate.append(week)\n",
     "counts = dict()\n",
     "for i in filesdate:\n",
     "    counts[i] = counts.get(i, 0) + 1\n",
+    "days = set(counts)\n",
     "counts"
    ]
   }
